Feature/java 17 (#16)
* fix rss timeout

* add  DecodableBlogParser

* add QuastorBlogParser

* add ConfluentBlogParser

* add AlgomasterBlogParser

* readme

* all parsers 'on'

* resolve conflicts

* fix msk zone

* disable spring blog

* throw exception if parser failed instead of empty articles

* add webkit parser

* add fp parser

* enable all parsers

* readme

* fix algomaster, remove thorben

* .

* some fixes

* add new parsers

* fix parsers

* some fixes

* readme

* Java 17

---------

Co-authored-by: asbobryako <asbobryako@mts.ru>